cleaned monash talk file

--- a/monash_tues_8.7.12/tues_talk_pdf.tex
+++ b/monash_tues_8.7.12/tues_talk_pdf.tex
@@ -178,6 +178,8 @@ in which case that shalt perform a logit transformation.
 \begin{frame}
 \frametitle{Monotonic transform}
 
+% pantheria data
+% see pantheria database for information
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\includegraphics[width=\maxwidth]{figure/body-sze} 
 \end{knitrout}
@@ -606,7 +608,7 @@ Likelihood is extremely powerful.
 Never underestimate the necessity of reproducible research and analysis.
 Using a markup language like {\LaTeX} and  literate programming tools you can embed code in reports, papers, and websites so that anyone, including yourself, can reproduce the exact results with minimal effort.
 So find a source repository and release your source to the world.
-The less time people expend trying to reproduce your work means more time spent extending and imporving your initial offering.
+The less time people expend trying to reproduce your work means more time spent extending and improving your initial offering.
 By making your steps more open, you are more accountable for your work and thus a better scientist.
 \end{frame}
 
