--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 various talks that i've given (Peter D Smits; psmits@uchicago.edu)
 
 figures will be from various sources and are hopefully annotated in the actual LaTeX and Rnw source files.
+
+all images and code snippets are for fair use and illustrative purposes only.
