--- a/README
+++ b/README
@@ -2,4 +2,4 @@ various talks that i've given (Peter D Smits; psmits@uchicago.edu)
 
 figures will be from various sources and are hopefully annotated in the actual LaTeX and Rnw source files.
 
-all images and code snippets are for fair use and illustrative purposes only.
+all images and code snippets i've used are for fair use and illustrative purposes only. i do not claim ownership of the things i've borrowed.
