final draft of D&D talk? also, update README

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 various talks that i've given (Peter D Smits; psmits@uchicago.edu)
 
-figures will be from various sources and are hopefully annotated in the actual LaTeX and Rnw source files.
+figures will be from various sources and are hopefully annotated in the actual LaTeX and Rnw source files. i make no guarentees about this though :(
 
-all images and code snippets i've used are for fair use and illustrative purposes only. i do not claim ownership of the things i've borrowed.
+all images and code snippets i've used are for fair use and illustrative purposes only. i do not claim ownership of the things i've borrowed. for clarities sake, I IN NO WAY SHAPE OR FORM MAKE CLAIM OF OWNERSHIP TO ANY OF THE IMAGES.
