--- a/tg_info_viz/opaque_graphs.tex
+++ b/tg_info_viz/opaque_graphs.tex
@@ -38,7 +38,21 @@ University of Chicago}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Good advice}
+  \frametitle{Beautful}
+  \begin{center}
+    \includegraphics[height = 0.9\textheight, keepaspectratio = true]{figure/wine_consumption_2006}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Tells a story}
+  \begin{center}
+    \includegraphics[width = \textwidth, keepaspectratio = true]{figure/bike_ggplot}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Gives advice}
   \begin{center}
     \includegraphics[height = 0.8\textheight, keepaspectratio = true]{figure/pub_flow}
   \end{center}
@@ -48,7 +62,7 @@ University of Chicago}
 \section{Academic}
 % need citations
 \begin{frame}
-  \frametitle{Pardon me as I cry}
+  \frametitle{;\_;}
   \begin{center}
     \includegraphics[height = 0.8\textheight, keepaspectratio = true]{figure/roeder_fig4}
   \end{center}
@@ -93,7 +107,7 @@ University of Chicago}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Too much.}
+  \frametitle{My sides}
   \includegraphics[width = \textwidth, keepaspectratio = true]{figure/android}
 \end{frame}
 
@@ -137,7 +151,7 @@ University of Chicago}
 \end{frame}
 
 \begin{frame}
-  \frametitle{It make me feel bad}
+  \frametitle{{[}Screams internally{]}}
   \includegraphics[width = \textwidth, keepaspectratio = true]{figure/fox_warming}
 \end{frame}
 
