--- a/tg_info_viz/opaque_graphs.tex
+++ b/tg_info_viz/opaque_graphs.tex
@@ -6,7 +6,7 @@
 \usetheme{default}
 \usecolortheme{orchid}
 
-\title{(Dis)information visualization}
+\title{(Mis)information visualization}
 \author{Peter D Smits}
 \institute{Committee on Evolutionary Biology \\
 University of Chicago}
@@ -38,7 +38,7 @@ University of Chicago}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Beautful}
+  \frametitle{Beautiful}
   \begin{center}
     \includegraphics[height = 0.9\textheight, keepaspectratio = true]{figure/wine_consumption_2006}
   \end{center}
@@ -81,7 +81,7 @@ University of Chicago}
 
 \begin{frame}
   % 3d pie chart
-  \frametitle{What is worse than one piechart?}
+  \frametitle{What is worse than one pie chart?}
   \includegraphics[width = \textwidth, keepaspectratio = true]{figure/cawley_fig1}
 \end{frame}
 
@@ -174,12 +174,12 @@ University of Chicago}
 \end{frame}
 
 \begin{frame}
-  \frametitle{I'm embarrased}
+  \frametitle{I'm embarrassed}
   \includegraphics[width = \textwidth, keepaspectratio = true]{figure/wamsley_pca}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Really embarrased}
+  \frametitle{Really embarrassed}
   \includegraphics[height = 0.8\textheight, keepaspectratio = true]{figure/wamsley_line}
 \end{frame}
 
